# oci-metrics-nl-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
scripts/: load_sample_data.py
src/oci_metrics_nl_mcp/: oci_client.py  oci_metrics.py  server.py
tests/: test_smoke.py
