[project]
name = "oci-metrics-nl-mcp"
version = "0.1.0"
description = "MCP server exposing OCI Monitoring metrics through natural language"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastmcp>=3.3.1",
    "oci>=2.175.0",
]

[project.scripts]
oci-metrics-nl-mcp = "oci_metrics_nl_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oci_metrics_nl_mcp"]

[dependency-groups]
dev = [
    "mcp[cli]>=1.27.1",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]
